# automatey

./: .gitignore  README.md  pyproject.toml
src/automatey/: __init__.py  automatey.py  cli.py  data_tools.py  duck_tools.py
tests/: main.py  test_automatey.py
tests/automatey/: test_automatey.py
tests/data_tools/test_combine_csv_files/: combined.csv
tests/duck_tools/combine_csv_files/: main.py  mock_data1.csv  mock_data2.CSV  test_combine_csv_files.py
