[project]
name = "automatey"
version = "0.1.0"
description = "A lightweight Python library for seamlessly managing configurations and running tasks as a directed acyclic graph (DAG)."
readme = "README.md"
authors = [
    { name = "Blake Phillips", email = "23227382+forgineer@users.noreply.github.com" }
]
requires-python = ">=3.11"
dependencies = [
    "flask>=3.1.2",
]

[build-system]
requires = ["uv_build>=0.8.17,<0.9.0"]
build-backend = "uv_build"
