[project]
name = "automatey"
version = "0.1.0"
description = "A lightweight Python library for seamlessly managing configurations and running tasks as a directed acyclic graph (DAG)."
readme = "README.md"
authors = [
    { name = "Blake Phillips", email = "23227382+forgineer@users.noreply.github.com" }
]
requires-python = ">=3.11"
dependencies = [
    "duckdb>=1.4.2",
    "flask>=3.1.2",
]
keywords = [
    "automation",
    "tools"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.11"
]

[project.urls]
Homepage = "https://github.com/forgineer/automatey"
Documentation = "https://github.com/forgineer/automatey"
Repository = "https://github.com/forgineer/automatey"
Issues = "https://github.com/forgineer/automatey/issues"

[project.scripts]
automatey = "automatey.cli:automatey_command"
combine-csv-files = "automatey.cli:combine_csv_files_command"

[build-system]
requires = ["uv_build>=0.8.17,<0.9.0"]
build-backend = "uv_build"
